--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,6 @@
 --------------------------------------------------------------------------------
 
-       LDAP AUTHENTICATION PLUGIN FOR TASKFREAK - last update 10/04/2009
+                 LDAP AUTHENTICATION PLUGIN FOR TASKFREAK
            AUTHOR(S): Thomas Chemineau <thomas.chemineau@gmail.com>
 
 --------------------------------------------------------------------------------
@@ -8,7 +8,7 @@
 
 
 
-Version 0.3.1 -- April 10, 2009
+Version 0.3.1 -- April 13, 2009
 ---------------------------------
 + Add auto user creation from LDAP directory
 
